Wayland crash when clicking Wacom tablet buttons
@Jehan
Submitted by Jehan Pagès Assigned to Wayland bug list
Link to original bug (#104027)
Description
GNOME/Wayland from Fedora 27.
When the crash happened, no specific application was opened, I was simply testing a Wacom tablet buttons (I just mapped some letters to a button and was clicking them in a terminal to see if they appeared). Then it crashed after a few minutes.
$ coredumpctl list [...] Fri 2017-12-01 23:09:10 CET 14052 1000 1000 6 present /usr/bin/Xwayland Fri 2017-12-01 23:09:13 CET 14002 1000 1000 5 present /usr/bin/gnome-shell
$ coredumpctl gdb /usr/bin/Xwayland PID: 14052 (Xwayland) UID: 1000 (jehan) GID: 1000 (jehan) Signal: 6 (ABRT) Timestamp: Fri 2017-12-01 23:09:10 CET (1h 49min ago) Command Line: /usr/bin/Xwayland :0 -rootless -terminate -core -listen 4 -listen 5 -displayfd 6 Executable: /usr/bin/Xwayland Control Group: /user.slice/user-1000.slice/session-5.scope Unit: session-5.scope Slice: user-1000.slice Session: 5 Owner UID: 1000 (jehan) Boot ID: 527685df08a54928b34265eb31732096 Machine ID: 91a227afc4144f14aff99675126a3873 Hostname: DarkMarmot Storage: /var/lib/systemd/coredump/core.Xwayland.1000.527685df08a54928b34265eb31732096.14052.1512166150000000.lz4 Message: Process 14052 (Xwayland) of user 1000 dumped core.
Stack trace of thread 14052:
#0 0x00007efcc645869b raise (libc.so.6)
#1 0x00007efcc645a3b1 abort (libc.so.6)
#2 0x0000000000594a9a OsAbort (Xwayland)
#3 0x0000000000599c63 AbortServer (Xwayland)
#4 0x000000000059aa85 FatalError (Xwayland)
#5 0x0000000000591b8e OsSigHandler (Xwayland)
#6 0x00007efcc6818a70 __restore_rt (libpthread.so.0)
#7 0x00007efcc88b9e79 wl_proxy_marshal (libwayland-client.so.0)
#8 0x0000000000428890 xwl_seat_set_cursor (Xwayland)
#9 0x0000000000428b79 xwl_set_cursor (Xwayland)
#10 0x000000000047505a miPointerUpdateSprite (Xwayland)
#11 0x00000000004752aa miPointerDisplayCursor (Xwayland)
#12 0x0000000000461480 CursorDisplayCursor (Xwayland)
#13 0x00000000004ee26f AnimCurDisplayCursor (Xwayland)
#14 0x0000000000560cdb ChangeToCursor (Xwayland)
#15 0x0000000000564c9c CheckMotion (Xwayland)
#16 0x0000000000564e7a WindowsRestructured (Xwayland)
#17 0x00000000005881c9 UnmapWindow (Xwayland)
#18 0x000000000055205a ProcUnmapWindow (Xwayland)
#19 0x0000000000557e88 Dispatch (Xwayland)
#20 0x000000000055bed0 dix_main (Xwayland)
#21 0x00007efcc644203a __libc_start_main (libc.so.6)
#22 0x0000000000422a3a _start (Xwayland)
Stack trace of thread 14053:
#0 0x00007efcc6813c3b pthread_cond_wait@@GLIBC_2.3.2 (libpthread.so.0)
#1 0x00007efcc091b97b thread_function (swrast_dri.so)
#2 0x00007efcc091b7f7 impl_thrd_routine (swrast_dri.so)
#3 0x00007efcc680d609 start_thread (libpthread.so.0)
#4 0x00007efcc653ae6f __clone (libc.so.6)
Stack trace of thread 14055:
#0 0x00007efcc6813c3b pthread_cond_wait@@GLIBC_2.3.2 (libpthread.so.0)
#1 0x00007efcc091b97b thread_function (swrast_dri.so)
#2 0x00007efcc091b7f7 impl_thrd_routine (swrast_dri.so)
#3 0x00007efcc680d609 start_thread (libpthread.so.0)
#4 0x00007efcc653ae6f __clone (libc.so.6)
Stack trace of thread 14056:
#0 0x00007efcc6813c3b pthread_cond_wait@@GLIBC_2.3.2 (libpthread.so.0)
#1 0x00007efcc091b97b thread_function (swrast_dri.so)
#2 0x00007efcc091b7f7 impl_thrd_routine (swrast_dri.so)
#3 0x00007efcc680d609 start_thread (libpthread.so.0)
#4 0x00007efcc653ae6f __clone (libc.so.6)
Stack trace of thread 14054:
#0 0x00007efcc6813c3b pthread_cond_wait@@GLIBC_2.3.2 (libpthread.so.0)
#1 0x00007efcc091b97b thread_function (swrast_dri.so)
#2 0x00007efcc091b7f7 impl_thrd_routine (swrast_dri.so)
#3 0x00007efcc680d609 start_thread (libpthread.so.0)
#4 0x00007efcc653ae6f __clone (libc.so.6)
$ coredumpctl gdb /usr/bin/gnome-shell PID: 14002 (gnome-shell) UID: 1000 (jehan) GID: 1000 (jehan) Signal: 5 (TRAP) Timestamp: Fri 2017-12-01 23:09:10 CET (1h 49min ago) Command Line: /usr/bin/gnome-shell Executable: /usr/bin/gnome-shell Control Group: /user.slice/user-1000.slice/session-5.scope Unit: session-5.scope Slice: user-1000.slice Session: 5 Owner UID: 1000 (jehan) Boot ID: 527685df08a54928b34265eb31732096 Machine ID: 91a227afc4144f14aff99675126a3873 Hostname: DarkMarmot Storage: /var/lib/systemd/coredump/core.gnome-shell.1000.527685df08a54928b34265eb31732096.14002.1512166150000000.lz4 Message: Process 14002 (gnome-shell) of user 1000 dumped core.
Stack trace of thread 14002:
#0 0x00007fd8af4f090b raise (libpthread.so.0)
#1 0x0000560892860a0b dump_gjs_stack_on_signal_handler (gnome-shell)
#2 0x00007fd8af4f0a70 __restore_rt (libpthread.so.0)
#3 0x00007fd8b128c7b1 _g_log_abort (libglib-2.0.so.0)
#4 0x00007fd8b128d7ec g_log_default_handler (libglib-2.0.so.0)
#5 0x0000560892860ae5 default_log_handler (gnome-shell)
#6 0x00007fd8b128da7d g_logv (libglib-2.0.so.0)
#7 0x00007fd8b128dbef g_log (libglib-2.0.so.0)
#8 0x00007fd8af7d5cce x_io_error (libmutter-1.so.0)
#9 0x00007fd8adebdede _XIOError (libX11.so.6)
#10 0x00007fd8adebb8a2 _XReadEvents (libX11.so.6)
#11 0x00007fd8adea2f84 XIfEvent (libX11.so.6)
#12 0x00007fd8af7968ab meta_display_get_current_time_roundtrip (libmutter-1.so.0)
#13 0x00007fd8af7c0ba9 handle_other_xevent (libmutter-1.so.0)
#14 0x00007fd8af7c173b xevent_filter (libmutter-1.so.0)
#15 0x00007fd8aea0ea7f gdk_event_apply_filters (libgdk-3.so.0)
#16 0x00007fd8aea0ed69 _gdk_x11_display_queue_events (libgdk-3.so.0)
#17 0x00007fd8ae9d8820 gdk_display_get_event (libgdk-3.so.0)
#18 0x00007fd8aea0eb12 gdk_event_source_dispatch (libgdk-3.so.0)
#19 0x00007fd8b1286bb7 g_main_context_dispatch (libglib-2.0.so.0)
#20 0x00007fd8b1286f60 g_main_context_iterate.isra.25 (libglib-2.0.so.0)
#21 0x00007fd8b1287272 g_main_loop_run (libglib-2.0.so.0)
#22 0x00007fd8af7a14fc meta_run (libmutter-1.so.0)
#23 0x000056089286042c main (gnome-shell)
#24 0x00007fd8af11a03a __libc_start_main (libc.so.6)
#25 0x000056089286056a _start (gnome-shell)
Stack trace of thread 14007:
#0 0x00007fd8af2068bb __poll (libc.so.6)
#1 0x00007fd8b1286ed9 g_main_context_iterate.isra.25 (libglib-2.0.so.0)
#2 0x00007fd8b1286fec g_main_context_iteration (libglib-2.0.so.0)
#3 0x00007fd8b1287031 glib_worker_main (libglib-2.0.so.0)
#4 0x00007fd8b12ae4c6 g_thread_proxy (libglib-2.0.so.0)
#5 0x00007fd8af4e5609 start_thread (libpthread.so.0)
#6 0x00007fd8af212e6f __clone (libc.so.6)
Stack trace of thread 14225:
#0 0x00007fd8af212fd6 epoll_pwait (libc.so.6)
#1 0x00007fd836da76e3 loop_iterate (libspa-support.so)
#2 0x00007fd8a37afba8 do_loop (libpipewire-0.1.so.0)
#3 0x00007fd8af4e5609 start_thread (libpthread.so.0)
#4 0x00007fd8af212e6f __clone (libc.so.6)
Stack trace of thread 14013:
#0 0x00007fd8af2068bb __poll (libc.so.6)
#1 0x00007fd8b1286ed9 g_main_context_iterate.isra.25 (libglib-2.0.so.0)
#2 0x00007fd8b1286fec g_main_context_iteration (libglib-2.0.so.0)
#3 0x00007fd89022842d dconf_gdbus_worker_thread (libdconfsettings.so)
#4 0x00007fd8b12ae4c6 g_thread_proxy (libglib-2.0.so.0)
#5 0x00007fd8af4e5609 start_thread (libpthread.so.0)
#6 0x00007fd8af212e6f __clone (libc.so.6)
Stack trace of thread 14072:
#0 0x00007fd8af4ebc3b pthread_cond_wait@@GLIBC_2.3.2 (libpthread.so.0)
#1 0x00007fd8a774fa24 _ZN2js17ConditionVariable4waitERNS_9LockGuardINS_5MutexEEE (libmozjs-52.so.0)
#2 0x00007fd8a774fc95 _ZN2js17ConditionVariable8wait_forERNS_9LockGuardINS_5MutexEEERKN7mozilla16BaseTimeDurationINS5_27TimeDurationValueCalculatorEEE (libmozjs-52.so.0)
#3 0x00007fd8a7b483d3 _ZN2js12HelperThread10threadLoopEv (libmozjs-52.so.0)
#4 0x00007fd8a7b699f2 _ZN2js6detail16ThreadTrampolineIRFvPvEJPNS_12HelperThreadEEE5StartES2_ (libmozjs-52.so.0)
#5 0x00007fd8af4e5609 start_thread (libpthread.so.0)
#6 0x00007fd8af212e6f __clone (libc.so.6)
Stack trace of thread 14073:
#0 0x00007fd8af4ebc3b pthread_cond_wait@@GLIBC_2.3.2 (libpthread.so.0)
#1 0x00007fd8a774fa24 _ZN2js17ConditionVariable4waitERNS_9LockGuardINS_5MutexEEE (libmozjs-52.so.0)
#2 0x00007fd8a774fc95 _ZN2js17ConditionVariable8wait_forERNS_9LockGuardINS_5MutexEEERKN7mozilla16BaseTimeDurationINS5_27TimeDurationValueCalculatorEEE (libmozjs-52.so.0)
#3 0x00007fd8a7b483d3 _ZN2js12HelperThread10threadLoopEv (libmozjs-52.so.0)
#4 0x00007fd8a7b699f2 _ZN2js6detail16ThreadTrampolineIRFvPvEJPNS_12HelperThreadEEE5StartES2_ (libmozjs-52.so.0)
#5 0x00007fd8af4e5609 start_thread (libpthread.so.0)
#6 0x00007fd8af212e6f __clone (libc.so.6)
Stack trace of thread 14076:
#0 0x00007fd8af4ebc3b pthread_cond_wait@@GLIBC_2.3.2 (libpthread.so.0)
#1 0x00007fd8a774fa24 _ZN2js17ConditionVariable4waitERNS_9LockGuardINS_5MutexEEE (libmozjs-52.so.0)
#2 0x00007fd8a774fc95 _ZN2js17ConditionVariable8wait_forERNS_9LockGuardINS_5MutexEEERKN7mozilla16BaseTimeDurationINS5_27TimeDurationValueCalculatorEEE (libmozjs-52.so.0)
#3 0x00007fd8a7b483d3 _ZN2js12HelperThread10threadLoopEv (libmozjs-52.so.0)
#4 0x00007fd8a7b699f2 _ZN2js6detail16ThreadTrampolineIRFvPvEJPNS_12HelperThreadEEE5StartES2_ (libmozjs-52.so.0)
#5 0x00007fd8af4e5609 start_thread (libpthread.so.0)
#6 0x00007fd8af212e6f __clone (libc.so.6)
Stack trace of thread 14078:
#0 0x00007fd8af4ebc3b pthread_cond_wait@@GLIBC_2.3.2 (libpthread.so.0)
#1 0x00007fd8a774fa24 _ZN2js17ConditionVariable4waitERNS_9LockGuardINS_5MutexEEE (libmozjs-52.so.0)
#2 0x00007fd8a774fc95 _ZN2js17ConditionVariable8wait_forERNS_9LockGuardINS_5MutexEEERKN7mozilla16BaseTimeDurationINS5_27TimeDurationValueCalculatorEEE (libmozjs-52.so.0)
#3 0x00007fd8a7b483d3 _ZN2js12HelperThread10threadLoopEv (libmozjs-52.so.0)
#4 0x00007fd8a7b699f2 _ZN2js6detail16ThreadTrampolineIRFvPvEJPNS_12HelperThreadEEE5StartES2_ (libmozjs-52.so.0)
#5 0x00007fd8af4e5609 start_thread (libpthread.so.0)
#6 0x00007fd8af212e6f __clone (libc.so.6)
Stack trace of thread 14079:
#0 0x00007fd8af4ebc3b pthread_cond_wait@@GLIBC_2.3.2 (libpthread.so.0)
#1 0x00007fd8a774fa24 _ZN2js17ConditionVariable4waitERNS_9LockGuardINS_5MutexEEE (libmozjs-52.so.0)
#2 0x00007fd8a774fc95 _ZN2js17ConditionVariable8wait_forERNS_9LockGuardINS_5MutexEEERKN7mozilla16BaseTimeDurationINS5_27TimeDurationValueCalculatorEEE (libmozjs-52.so.0)
#3 0x00007fd8a7b483d3 _ZN2js12HelperThread10threadLoopEv (libmozjs-52.so.0)
#4 0x00007fd8a7b699f2 _ZN2js6detail16ThreadTrampolineIRFvPvEJPNS_12HelperThreadEEE5StartES2_ (libmozjs-52.so.0)
#5 0x00007fd8af4e5609 start_thread (libpthread.so.0)
#6 0x00007fd8af212e6f __clone (libc.so.6)
Stack trace of thread 14074:
#0 0x00007fd8af4ebc3b pthread_cond_wait@@GLIBC_2.3.2 (libpthread.so.0)
#1 0x00007fd8a774fa24 _ZN2js17ConditionVariable4waitERNS_9LockGuardINS_5MutexEEE (libmozjs-52.so.0)
#2 0x00007fd8a774fc95 _ZN2js17ConditionVariable8wait_forERNS_9LockGuardINS_5MutexEEERKN7mozilla16BaseTimeDurationINS5_27TimeDurationValueCalculatorEEE (libmozjs-52.so.0)
#3 0x00007fd8a7b483d3 _ZN2js12HelperThread10threadLoopEv (libmozjs-52.so.0)
#4 0x00007fd8a7b699f2 _ZN2js6detail16ThreadTrampolineIRFvPvEJPNS_12HelperThreadEEE5StartES2_ (libmozjs-52.so.0)
#5 0x00007fd8af4e5609 start_thread (libpthread.so.0)
#6 0x00007fd8af212e6f __clone (libc.so.6)
Stack trace of thread 14070:
#0 0x00007fd8af214257 __socket (libc.so.6)
#1 0x00007fd8a3ffe4fd _xcb_socket (libxcb.so.1)
#2 0x00007fd8a3ffeccd xcb_connect_to_display_with_auth_info (libxcb.so.1)
#3 0x00007fd88845b176 pa_client_conf_from_x11 (libpulsecommon-11.1.so)
#4 0x00007fd88841cf00 pa_client_conf_load (libpulsecommon-11.1.so)
#5 0x00007fd888699752 pa_context_new_with_proplist (libpulse.so.0)
#6 0x00007fd8888de10a context_connect (libcanberra-pulse.so)
#7 0x00007fd8888de571 context_state_cb (libcanberra-pulse.so)
#8 0x00007fd888699aa8 pa_context_set_state (libpulse.so.0)
#9 0x00007fd88844bf76 do_pstream_read_write (libpulsecommon-11.1.so)
#10 0x00007fd8886af378 pa_mainloop_dispatch (libpulse.so.0)
#11 0x00007fd8886af74e pa_mainloop_iterate (libpulse.so.0)
#12 0x00007fd8886af7d0 pa_mainloop_run (libpulse.so.0)
#13 0x00007fd8886bd639 thread (libpulse.so.0)
#14 0x00007fd88845cac8 internal_thread_func (libpulsecommon-11.1.so)
#15 0x00007fd8af4e5609 start_thread (libpthread.so.0)
#16 0x00007fd8af212e6f __clone (libc.so.6)
Stack trace of thread 14009:
#0 0x00007fd8b12a455e g_slice_free1 (libglib-2.0.so.0)
#1 0x00007fd8b12c28f6 g_variant_unref (libglib-2.0.so.0)
#2 0x00007fd8b12c29c1 g_variant_release_children (libglib-2.0.so.0)
#3 0x00007fd8b12c2904 g_variant_unref (libglib-2.0.so.0)
#4 0x00007fd8b186764f g_dbus_message_new_from_blob (libgio-2.0.so.0)
#5 0x00007fd8b1871a66 _g_dbus_worker_do_read_cb (libgio-2.0.so.0)
#6 0x00007fd8b182e2a4 g_task_return_now (libgio-2.0.so.0)
#7 0x00007fd8b182e2d9 complete_in_idle_cb (libgio-2.0.so.0)
#8 0x00007fd8b1283597 g_idle_dispatch (libglib-2.0.so.0)
#9 0x00007fd8b1286bb7 g_main_context_dispatch (libglib-2.0.so.0)
#10 0x00007fd8b1286f60 g_main_context_iterate.isra.25 (libglib-2.0.so.0)
#11 0x00007fd8b1287272 g_main_loop_run (libglib-2.0.so.0)
#12 0x00007fd8b186fb36 gdbus_shared_thread_func (libgio-2.0.so.0)
#13 0x00007fd8b12ae4c6 g_thread_proxy (libglib-2.0.so.0)
#14 0x00007fd8af4e5609 start_thread (libpthread.so.0)
#15 0x00007fd8af212e6f __clone (libc.so.6)
Stack trace of thread 14075:
#0 0x00007fd8af4ebc3b pthread_cond_wait@@GLIBC_2.3.2 (libpthread.so.0)
#1 0x00007fd8a774fa24 _ZN2js17ConditionVariable4waitERNS_9LockGuardINS_5MutexEEE (libmozjs-52.so.0)
#2 0x00007fd8a774fc95 _ZN2js17ConditionVariable8wait_forERNS_9LockGuardINS_5MutexEEERKN7mozilla16BaseTimeDurationINS5_27TimeDurationValueCalculatorEEE (libmozjs-52.so.0)
#3 0x00007fd8a7b483d3 _ZN2js12HelperThread10threadLoopEv (libmozjs-52.so.0)
#4 0x00007fd8a7b699f2 _ZN2js6detail16ThreadTrampolineIRFvPvEJPNS_12HelperThreadEEE5StartES2_ (libmozjs-52.so.0)
#5 0x00007fd8af4e5609 start_thread (libpthread.so.0)
#6 0x00007fd8af212e6f __clone (libc.so.6)
Stack trace of thread 14077:
#0 0x00007fd8af4ebc3b pthread_cond_wait@@GLIBC_2.3.2 (libpthread.so.0)
#1 0x00007fd8a774fa24 _ZN2js17ConditionVariable4waitERNS_9LockGuardINS_5MutexEEE (libmozjs-52.so.0)
#2 0x00007fd8a774fc95 _ZN2js17ConditionVariable8wait_forERNS_9LockGuardINS_5MutexEEERKN7mozilla16BaseTimeDurationINS5_27TimeDurationValueCalculatorEEE (libmozjs-52.so.0)
#3 0x00007fd8a7b483d3 _ZN2js12HelperThread10threadLoopEv (libmozjs-52.so.0)
#4 0x00007fd8a7b699f2 _ZN2js6detail16ThreadTrampolineIRFvPvEJPNS_12HelperThreadEEE5StartES2_ (libmozjs-52.so.0)
#5 0x00007fd8af4e5609 start_thread (libpthread.so.0)
#6 0x00007fd8af212e6f __clone (libc.so.6)